# mil-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: publish-catalog-pages.yml
catalog-source/: cheats-sources.json  saves-sources.json
catalog-source/manual-cheats/: README.md
catalog-source/manual-saves/: README.md
docs/: app-structure.md  build-and-release.md  cheats-index-v1.md  code-maintenance-guide.md  credits-and-references.md  delivery-architecture-v1.md  eden-manifest-export.md  emulator-manifest-v2.md  features.md  implementation-plan.md  manual-curation.md  repo-split-rollout.md  ryujinx-manifest-export.md  savegames-aggregation-v1.md  settings.github-pages.example.ini  technical-stack.md  tools-and-operations.md
include/mil/: cheats.hpp  config.hpp  graphics.hpp  http.hpp  installer.hpp  models.hpp  platform.hpp  savegames.hpp
releases/v1.0/: RELEASE-NOTES.md  checksums.txt  mil_manager.nro  mil_manager_forwarder.nsp
romfs/lang/: en-US.json  pt-BR.json
src/: app.cpp  catalog.cpp  cheats.cpp  config.cpp  graphics.cpp  http.cpp  installer.cpp  platform_switch.cpp  savegames.cpp
tools/: export-emulator-installed.py  export-ryujinx-installed.py  generate-cheats-index.py  generate-index.py  generate-lang-json.py  generate-saves-index.py  mil_emulator_sync.py  prepare-pages-site.py  prepare_catalog_thumbs.py  requirements-catalog.txt  start-emulator-with-sync.ps1  sync-emulator.ps1  sync-mil-manager-catalog.ps1  sync-mil-manager-delivery.ps1  sync-ryujinx.ps1
